# cpp-neural-net

./: .gitmodules  CMakeLists.txt  Nns.sln  README.md
NnsLib/: NnsLib.vcxproj  NnsLib.vcxproj.filters  pch.h
NnsLib.Tests/: BackpropagationTest.cpp  ConjugateGradientTest.cpp  HelperFunctions.cpp  HelperFunctions.h  KohonenNetworkTest.cpp  MultilayerPerceptronTest.cpp  NnsLib.Tests.vcxproj  TestFixtures.cpp  TestFixtures.h  TrainingErrorStateTests.cpp  packages.config  pch.h
NnsLib.Tests/TestData/: gaussian_function_i1_o1_11p.txt  xor_i2_o1.txt  xor_i3_o1.txt
NnsLib/Common/: ActivationFunctions.h  IBase.h  InterfaceHelpers.h  fuzzy_category.cc.bak  fuzzy_category.h.bak
NnsLib/Initialization/: IWeightInitializer.h  RandomWeightInitializer.cpp  RandomWeightInitializer.h
NnsLib/Models/: FeedforwardNetworkBase.cpp  FeedforwardNetworkBase.h  IFeedforwardNetwork.h  KohonenNetwork.cpp  KohonenNetwork.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h
NnsLib/Optimization/: Backpropagation.cpp  Backpropagation.h  ConjugateGradient.cpp  ConjugateGradient.h  IWeightOptimizer.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
NnsLib/Training/: ITrainingAlgorithm.h  SupervisedTraining.cpp  SupervisedTraining.h  TrainingErrorState.cpp  TrainingErrorState.h
NnsLib/Types/: Collections.h  Units.h
